--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -1,8 +1,10 @@
 .footer {
 
      &__copyright {
-        // margin-top: 20px;
-        cursor: pointer;
+      width: 260px;
+      margin: 0 auto;
+      border-top: 1px solid $frameMenu;
+      cursor: pointer;
       }
 
       &__creator{
@@ -44,4 +46,16 @@
    margin-left: 30px;
   }
 
+}
+
+@media (min-width: 768px){
+
+  .footer{
+
+    &__copyright{
+      border: none;
+      margin: 0;
+      flex-basis: 25%;
+    }
+  }
 }
