--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -1,20 +1,32 @@
 .footer {
-    display: block;
-    margin: 58px 0 0 0;
-    background: $lightGray;
-    height: 160px;
+
+    &__bg{
+        background: $lightGray;
+        width: 100%;
+    }
+
+    &__inner{
+        display: block;
+        margin: 58px 0 0 0;
+        width: 100%;
+        height: 160px; 
+    }
+   
+
+    &__logo{
+        display: none;
+    }
     
     &__link {
-        padding: 10px;
+        margin: 20px 13px 20px 13px;
     }
 
     &__social {
         display: block;
-        text-align: center;
         height: 80px;
-        width: 260px;
-        border-bottom:1px solid $frameMenu;  
-        margin: 0 auto;   
+        width: 195px; 
+        margin: 0 auto; 
+        text-align: center;  
         cursor: pointer;
     }
 
@@ -85,21 +97,33 @@
         
     }
 
-    i {
-        margin: 25px 0 0 0;
-    }
+    // i {
+    //     margin: 25px 0 0 0;
+    // }
 }
 @media (min-width: 768px){
 
      .footer {
-        @include flexbox;
-        flex-direction: row;
-        height: 143px;
-        align-items: center;
-        justify-content: space-around;
-        margin: 0 auto;
+
+        &__inner{
+          @include flexbox;
+          flex-direction: row;
+          height: 143px;
+          align-items: center;
+        // justify-content: space-around;
+        // margin: 0 auto;
+          margin: 0 auto; 
+        }
+       
 
         &__logo{
+            display: block;
+            flex-basis: 27%;
+            text-align: center;
+        }
+
+        &__logo-icon{
+            display: inline-block;
             width: 102px;
             height: 34px;
             background: url('/src/img/sprites.png') -603px -88px;
@@ -107,37 +131,34 @@
         }
 
         &__social{
-           border: none;
-           height: 35px;
-           margin: 0;
-        }
-
-        i {
+            flex-basis: 43%;
             margin: 0;
+            text-align: center;
         }
     }
 }
-@media screen and (min-width: 1024px){
+@media (min-width: 1024px){
 
     .footer {
-        width: 100%;
-        @include flexbox;
-        margin-top: 105px;
+        // width: 100%;
+        // @include flexbox;
+        // margin-top: 105px;
 
-        &__logo:hover {
+        &__logo-icon:hover {
+            display: inline-block;
             background:url('/src/img/sprites.png') -600px -132px;
             width: 102px;
             height: 34px;
         }
 
-        &__logo:active {
+        &__logo-icon:active {
             opacity:0.3;
         }
 
-        &__social {
-            flex-basis: 200px;
-            margin: 0;
-        }
+        // &__social {
+        //     flex-basis: 200px;
+        //     margin: 0;
+        // }
     }
 
 }
