--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -1,5 +1,8 @@
 .footer{
-    display: block;
+  flex: 0 0 auto;/* Футер заполнит столько вертикального пространства, сколько ему будет нужно, ни пикселем больше */
+
+
+    //display: block;
     margin: 58px 0 0 0;
     background: $lightGray;
     height: 160px;
@@ -95,6 +98,8 @@
 @media (min-width: 768px){
 
      .footer {
+flex: 0 0 auto;
+
         @include flexbox;
         flex-direction: row;
         height: 143px;
@@ -123,6 +128,8 @@
 @media screen and (min-width: 1024px){
 
     .footer {
+flex: 0 0 auto;
+
         width: 100%;
         @include flexbox;
         margin-top: 105px;
