--- a/src/style/blocks/pageFooter/bottomFooter.scss
+++ b/src/style/blocks/pageFooter/bottomFooter.scss
@@ -3,7 +3,7 @@
      &__copyright {
       width: 260px;
       margin: 0 auto;
-      border-top: 1px solid $frameMenu;
+      border-top: 1px solid #e5e5e5;
       cursor: pointer;
       }
 
@@ -59,3 +59,4 @@
     }
   }
 }
+
