--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -3,11 +3,12 @@
 margin: 0 auto;
 
 .page-form{
+
 margin: 0 auto;
 min-width:320px;
 //width:100%;
 &__title{
-margin-top: 80px;
+margin-top: -340px;//можно убрать
 
 //min-width:320px;
 //width:100%;
@@ -458,7 +459,7 @@ line-height: 18px;
 margin-top: 55px;
 margin-left: 50px;
 &__name-grup{
-display: flex;
+@include flexbox;
 margin-left: 140px;
 margin-top: 40px;
 }
@@ -519,7 +520,7 @@ cursor: pointer;
 margin-left: 215px;
 margin-top: -15px;//20
 margin-bottom: -20px;///30
-padding:10px 220px 16px 18px;
+padding:10px 220px 8px 18px;
 @include textLg(19px, 400);
 line-height: 18px;
 background-color: #f1f1f1;
@@ -530,7 +531,7 @@ margin-left: 168px;
 @include input-placeholder;
 @include textLg(19px, 400);
 width: 470px;
-padding: 13px 10px 73px 15px;//83
+padding: 13px 10px 93px 15px;//83
 margin-bottom: 50px;
 line-height: 18px;
 }
@@ -587,8 +588,7 @@ margin-top: 12px;
   width: 50px;
   height: 50px;
   border: 2px solid #63d1bb;
-
-  border-radius: 50%;
+border-radius: 50%;
   background: #fff;
   }
 &__input:not(checked),&__label:active::before {
@@ -603,8 +603,6 @@ margin-top: 12px;
   background: #fff;
 }
 }
-
-
 .filter{
 height: 228px;
 .filters__title{
@@ -644,7 +642,7 @@ background: #fff;
 
 
 &__label{
-display: flex;
+@include flexbox;
 margin-bottom: 3px;
 }
 }
@@ -689,9 +687,8 @@ margin-left: 890px;
 background:url('/src/img/sprites.png')  -264px -263px;
 width: 25px;
 height: 24px;
-//position: absolute;
+
 margin-left: 890px;
-//display: block;
 z-index: 7;
 }
 &__extra{
@@ -715,7 +712,7 @@ margin-top: -50px;
 //display: inline-block;
 //position: relative;
 vertical-align:top;
-margin-bottom: 100px;
+margin-bottom: 120px;
 
 }
 }
