добавила картинки формата webp/для главной страницы добавила <picture></picture>

--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -359,6 +359,10 @@
     &__caption {
       @include titleDesk;
     }
+
+    &__slide1, &__slide2, &__slide3{
+      height: 201px;
+    }
     
     &__slides{
       width: 875px;
