--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -1,7 +1,7 @@
 
- .open{
-  display: block;
-}
+ //.open{
+  //display: block;
+//}
 .main-catalog {
   width: 320px;
 // max-width: 1150px; так он навсю ширину
@@ -201,8 +201,95 @@ color: $white;
 .player__btn:active{
 opacity:0.8;
 }
+//.modal-ctg {
+  //margin-top: -250px;
+  //margin-left: -30px;
+  //width: 320px;
+  //height: 336px;
+  //box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  //border: 1px solid #c6c6c6;
+  //background: $white;
+  //position: fixed;
+//top: 50%;
+//z-index:5;
+//display: none;
+  //&__title {
+   // margin-left: 89px;
+   // margin-top: 36px;
+    //width: 149px;
+   // @include textLg(25px, 700);
+    //line-height: 30px;
+    //text-transform: uppercase;
+  //}
+  //&__text {
+    //line-height: 30px;
+    //text-align: center;
+   // margin-top: -15px;
+  //}
+  //&__form {
+    //width: 260px;
+    //margin-top: 38px;
+    //margin-left: 30px;
+  //}
+  //&__input {
+    //display: none;
+  //}
+  //&__size {
+    //padding: 14px 34px;
+    //cursor: pointer;
+    //border: 2px solid #ececec;
+    //@include textLg(17px, 700);
+    //background-color: #ffffff;
+  //line-height: 16px;
+//}
+//&__size:hover{
+ //border: 2px solid #c7c7c7;
+//}
+//&__size:focus{
+//border: 2px solid #63d1bb;
+//}
+//&__size:active {//
+  //border: 2px solid #63d1bb;
+//}
+//&__input:checked + &__size {
+    //border: 2px solid #63d1bb;
+  //}
+//&__btn {
+    //width: 260px;
+    //height: 52px;
+    //background-color: #63d1bb;
+    //cursor: pointer;
+    //@include textLg(17px, 700);
+    //line-height: 16px;
+    //color: $white;
+    //margin-left: 30px;
+    //text-transform: uppercase;
+    //margin-top: 44px;
+    //border: none;
+  //}
+//}
+//.overlay {
+    //width: 100%;
+    //height: 2444px;
+    //position: fixed;
+    //opacity: 0.9;
+    //z-index:3;
+    //background-color: #fff;
+    //cursor: pointer;
+    //display: none;
+    //top: 0;
+   // left: 0;
+    //margin-left: 0px;
+//}
+}
+}
+
+// index ______index page_____________________________
+//.modal-ctg.open{
+  //display: block;
+//}
 .modal-ctg {
-  margin-top: -250px;
+  margin-top: -150px;
   margin-left: -30px;
   width: 320px;
   height: 336px;
@@ -210,10 +297,11 @@ opacity:0.8;
   border: 1px solid #c6c6c6;
   background: $white;
   position: fixed;
-top: 50%;
-z-index:5;
-display: none;
+  top: 50%;
+  z-index: 5;
+   display: none;
   &__title {
+    //text-align: center;
     margin-left: 89px;
     margin-top: 36px;
     width: 149px;
@@ -235,26 +323,26 @@ display: none;
     display: none;
   }
   &__size {
-    padding: 20px 34px;
+    padding: 14px 34px;
     cursor: pointer;
     border: 2px solid #ececec;
     @include textLg(17px, 700);
     background-color: #ffffff;
-  line-height: 16px;
-}
-&__size:hover{
- border: 2px solid #c7c7c7;
-}
-&__size:focus{
-border: 2px solid #63d1bb;
-}
-&__size:active {
-  border: 2px solid #63d1bb;
-}
-&__input:checked + &__size {
+    line-height: 16px;
+  }
+  &__size:hover {
+    border: 2px solid #c7c7c7;
+  }
+  &__size:focus {
     border: 2px solid #63d1bb;
   }
-&__btn {
+  &__size:active {
+    border: 2px solid #63d1bb;
+  }
+  &__input:checked+&__size {
+    border: 2px solid #63d1bb;
+  }
+  .modal-ctg__btn {
     width: 260px;
     height: 52px;
     background-color: #63d1bb;
@@ -268,98 +356,100 @@ border: 2px solid #63d1bb;
     border: none;
   }
 }
+
 .overlay {
-    width: 100%;
-    height: 2444px;
-    position: fixed;
-    opacity: 0.9;
-    z-index:3;
-    background-color: #fff;
-    cursor: pointer;
-    display: none;
-    top: 0;
-    left: 0;
-    margin-left: 0px;
-}
-}
+  width: 100%;
+  height: 2444px;
+  position: fixed;
+  opacity: 0.9;
+  z-index: 3;
+  background-color: #fff;
+  cursor: pointer;
+  display: none;
+  top: 0;
+  left: 0;
+  margin-left: 0px;
 }
 
-// index ______index page_____________________________
-.modal-ctg.open{
-  display: block;
-}
-.modal-ctg {
-   display: none;
-   position: absolute;
-   top: 175%;
-   left: 0;
-   background-color: $white;
 
-  width: 320px;
-  height: 336px;
 
-  &__title{
-    width: 146px;
-    text-align: center;
-    text-transform: uppercase;
-    margin: 37px 0 25px 87px;
-  }
 
-  &__group{
-    width: 260px;
-    height: 53px;
-    margin: 30px 0 30px 30px;
-    display: inline-block;
-  }
 
-  &__ch-gr{
-    width: 82px;
-    height: 53px;
-    display: inline-block;
-  }
 
-  &__text{
-    text-align: center;
-    margin: 0;
-  }
+//Катина модалка)//
 
-  &__input{
-    display: none;
-  }
+//.modal-ctg {
+  // display: none;
+  // position: absolute;
+   //top: 175%;
+  // left: 0;
+   //background-color: $white;
 
-  &__size{
-    position: relative;
-    top: 14px;
-    left: 0;
-    font-weight: 700;
-    padding: 12px 0px 0px 33px;
-  }
+ // width: 320px;
+ // height: 336px;
 
-  &__size:before{
-    position: absolute;
-    content: "";
-    width: 80px;
-    height: 50px;
-    border: 1px solid $frameMenu;
-    top: 0;
-    left: 0;
-  }
+ // &__title{
+   // width: 146px;
+   // text-align: center;
+   // text-transform: uppercase;
+   // margin: 37px 0 25px 87px;
+  //}
 
-  input:checked + label:after{
-    position: absolute;
-    content: "";
-    width: 80px;
-    height: 50px;
-    border: 1px solid $greenLeft;
-    top: 0;
-    left: 0;
-  }
+  //&__group{
+   // width: 260px;
+   // height: 53px;
+   // margin: 30px 0 30px 30px;
+   // display: inline-block;
+  //}
 
-  button{
-    margin: 0 0 0 30px;
-  }
-}
+  //&__ch-gr{
+   // width: 82px;
+   // height: 53px;
+    //display: inline-block;
+  //}
 
+ // &__text{
+   // text-align: center;
+   // margin: 0;
+  //}
+
+  //&__input{
+    //display: none;
+  //}
+
+  //&__size{
+    //position: relative;
+    //top: 14px;
+    //left: 0;
+    //font-weight: 700;
+    //padding: 12px 0px 0px 33px;
+  //}
+
+  //&__size:before{
+   // position: absolute;
+   // content: "";
+   // width: 80px;
+   // height: 50px;
+   // border: 1px solid $frameMenu;
+   // top: 0;
+   // left: 0;
+  //}
+
+  //input:checked + label:after{
+    //position: absolute;
+    //content: "";
+    //width: 80px;
+    //height: 50px;
+   // border: 1px solid $greenLeft;
+    //top: 0;
+   // left: 0;
+ // }
+
+  //button{//
+    //margin: 0 0 0 30px;
+  //}
+//}
+//окончание//
 .catalog-card {
 
   &__item {
@@ -438,6 +528,97 @@ border: 2px solid #63d1bb;
 
 @media (min-width:768px) {
 
+.modal-ctg {
+  width: 566px;
+  height: 336px;
+  margin-top: -250px;
+  margin-left: 50px;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  border: 1px solid #c6c6c6;
+  background: $white;
+  position: fixed;
+  top: 50%;
+  z-index: 5;
+  display: none;
+  &__title {
+    width: 355px;
+    height: 29px;
+    margin-top: 45px;
+    margin-left: 108px;
+    @include textLg(30px, 700);
+    line-height: 57px;
+    text-transform: uppercase;
+  }
+  &__text {
+    @include textLg(17px, 400);
+    line-height: 30px;
+    color: $darkGray;
+    text-align: center;
+    margin-top: 12px;
+  }
+  &__form {
+    width: 360px;
+    margin-top: 38px;
+    margin-left: 108px;
+  }
+  &__input {
+    display: none;
+  }
+  &__size {
+    padding: 20px 50px;
+    cursor: pointer;
+    border: 2px solid #ececec;
+    @include textLg(17px, 700);
+    background-color: $white;
+    color: $darkGray;
+    line-height: 16px;
+  }
+  &__size:hover {
+    border: 2px solid #c7c7c7;
+  }
+  &__size:focus {
+    border: 2px solid #63d1bb;
+  }
+  &__size:active {
+    border: 2px solid #63d1bb;
+  }
+  &__input:checked+&__size {
+    border: 2px solid #63d1bb;
+  }
+  .modal-ctg__btn {
+
+    width: 355px;
+    height: 52px;
+    background-color: $greenLeft;
+    cursor: pointer;
+    @include textLg(17px, 700);
+    line-height: 16px;
+    color: $white;
+    margin-left: 108px;
+    text-transform: uppercase;
+    margin-top: 51px;
+    border: none;
+  }
+}
+
+.overlay {
+  width: 100%;
+  height: 2444px;
+  position: fixed;
+  opacity: 0.9;
+  background-color: #fff;
+  cursor: pointer;
+  display: none;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  margin-left: 10px;
+}
+
+
+
+
+
   .catalog-card {
 
     width: 668px;
@@ -489,6 +670,95 @@ border: 2px solid #63d1bb;
 }
 
 @media (min-width: 1024px) {
+.modal-ctg {
+  margin-top: -250px;
+  margin-left: 240px;
+  width: 566px;
+  height: 336px;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  border: 1px solid #c6c6c6;
+  background: #fff;
+  position: fixed;
+  top: 50%;
+  z-index: 5;
+  display: none;
+  &__title {
+    width: 355px;
+    height: 29px;
+    margin-top: 45px;
+    margin-left: 108px;
+    @include textLg(30px, 700);
+    line-height: 57px;
+    text-transform: uppercase;
+  }
+  &__text {
+    @include textLg(17px, 400);
+    line-height: 30px;
+    color: $darkGray;
+    text-align: center;
+    margin-top: 12px;
+  }
+  &__form {
+    width: 360px;
+    margin-top: 38px;
+    margin-left: 108px;
+  }
+  &__input {
+    display: none;
+  }
+  &__size {
+    padding: 20px 50px;
+    cursor: pointer;
+    border: 2px solid #ececec;
+    @include textLg(17px, 700);
+    background-color: #ffffff;
+    color: #444444;
+    line-height: 16px;
+  }
+  &__size:hover {
+    border: 2px solid #c7c7c7;
+  }
+  &__size:focus {
+    border: 2px solid #63d1bb;
+  }
+  &__size:active {
+    border: 2px solid #63d1bb;
+  }
+  &__input:checked+&__size {
+    border: 2px solid #63d1bb;
+  }
+  .modal-ctg__btn {
+
+    width: 355px;
+    height: 52px;
+    background-color: #63d1bb;
+    cursor: pointer;
+    @include textLg(17px, 700);
+    line-height: 16px;
+    color: $white;
+    margin-left: 108px;
+    text-transform: uppercase;
+    margin-top: 51px;
+    border: none;
+  }
+}
+
+.overlay {
+  width: 100%;
+  height: 2444px;
+  position: fixed;
+  opacity: 0.9;
+  background-color: #fff;
+  cursor: pointer;
+  display: none;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  margin-left: 0px;
+}
+
+
+
 
   .catalog-card {
     width: 1050px;
@@ -713,91 +983,91 @@ padding-bottom: 150px;
   margin-left: 42px;
   padding:16px 0px 26px 0px;
 }
-.modal-ctg {
-  width: 566px;
-  height: 336px;
-  margin-top: -250px;
-  margin-left: 50px;
-  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
-  border: 1px solid #c6c6c6;
-  background: $white;
-  position: fixed;
-  top: 50%;
-  z-index:5;
-  display: none;
-&__title {
-  width: 355px;
-  height: 29px;
-  margin-top: 45px;
-  margin-left: 108px;
-  @include textLg(30px, 700);
-  line-height: 57px;
-  text-transform: uppercase;
-}
-&__text {
-  @include textLg(17px, 400);
-  line-height: 30px;
-  color: $darkGray;
-  text-align: center;
-  margin-top: 12px;
-}
-&__form {
-  width: 360px;
-  margin-top: 38px;
-  margin-left: 108px;
-}
-&__input {
-  display: none;
-}
-&__size {
-  padding: 20px 50px;
-  cursor: pointer;
-  border: 2px solid #ececec;
-  @include textLg(17px, 700);
-  background-color: $white;
-  color: $darkGray;
-  line-height: 16px;
-}
-&__size:hover {
-  border: 2px solid #c7c7c7;
-}
-&__size:focus {
-  border: 2px solid #63d1bb;
-}
-&__size:active {
-  border: 2px solid #63d1bb;
-}
-&__input:checked+&__size {
-  border: 2px solid #63d1bb;
-}
-&__btn {
-     width: 355px;
-     height: 52px;
-     background-color: $greenLeft;
-    cursor: pointer;
-     @include textLg(17px, 700);
-     line-height: 16px;
-     color: $white;
-     margin-left: 108px;
-     text-transform: uppercase;
-     margin-top: 51px;
-     border: none;
-   }
+//.modal-ctg {
+  //width: 566px;
+  //height: 336px;
+  //margin-top: -250px;
+  //margin-left: 50px;
+  //box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  //border: 1px solid #c6c6c6;
+  //background: $white;
+  //position: fixed;
+  //top: 50%;
+  //z-index:5;
+  //display: none;
+//&__title {
+  //width: 355px;
+  //height: 29px;
+  //margin-top: 45px;
+ // margin-left: 108px;
+  //@include textLg(30px, 700);
+  //line-height: 57px;
+  //text-transform: uppercase;
+//}
+//&__text {
+  //@include textLg(17px, 400);
+  //line-height: 30px;
+  //color: $darkGray;
+  //text-align: center;
+  //margin-top: 12px;
+//}
+//&__form {
+  //width: 360px;
+  //margin-top: 38px;
+  //margin-left: 108px;
+//}
+//&__input {
+  //display: none;
+//}
+//&__size {
+ // padding: 20px 50px;
+  //cursor: pointer;
+  //border: 2px solid #ececec;
+  //@include textLg(17px, 700);
+  //background-color: $white;
+  //color: $darkGray;
+  //line-height: 16px;
+//}
+//&__size:hover {
+ // border: 2px solid #c7c7c7;
+//}
+//&__size:focus {
+  //border: 2px solid #63d1bb;
+//}
+//&__size:active {
+ // border: 2px solid #63d1bb;
+//}
+//&__input:checked+&__size {
+  //border: 2px solid #63d1bb;
+//}
+//&__btn {
+     //width: 355px;
+     //height: 52px;
+    // background-color: $greenLeft;
+    //cursor: pointer;
+     //@include textLg(17px, 700);
+     //line-height: 16px;
+    //color: $white;
+     //margin-left: 108px;
+     //text-transform: uppercase;
+    // margin-top: 51px;
+     //border: none;
+   //}
 
-}
-   .overlay {
-     width: 100%;
-     height: 2444px;
-     position: fixed;
-     opacity: 0.9;
-     background-color: #fff;
-      cursor: pointer;
-     display: none;
-     z-index: 3;
-     top: 0;
-     left: 0;
-     margin-left: 10px;
-   }
+//}
+   //.overlay {
+    // width: 100%;
+    // height: 2444px;
+    // position: fixed;
+    // opacity: 0.9;
+     //background-color: #fff;
+     // cursor: pointer;
+     //display: none;
+     //z-index: 3;
+     //top: 0;
+     //left: 0;
+    // margin-left: 10px;
+   //}
 }
 }
 }
@@ -939,90 +1209,90 @@ background-color: #ffffff;
 margin-left: 80px;
 margin-top: 64px;
 }
-.modal-ctg {
-margin-top: -250px;
-   margin-left: 240px;
-   width: 566px;
-   height: 336px;
-   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
-   border: 1px solid #c6c6c6;
-   background: #fff;
-   position:fixed;
-   top: 50%;
-  z-index:5;
-  display: none;
-&__title {
-     width: 355px;
-     height: 29px;
-     margin-top: 45px;
-     margin-left: 108px;
-     @include textLg(30px, 700);
-     line-height: 57px;
-     text-transform: uppercase;
-   }
-&__text {
-     @include textLg(17px, 400);
-     line-height: 30px;
-     color: $darkGray;
-     text-align: center;
-     margin-top: 12px;
-   }
-&__form {
-     width: 360px;
-     margin-top: 38px;
-     margin-left: 108px;
-   }
-&__input {
-     display: none;
-   }
-&__size {
-     padding: 20px 50px;
-     cursor: pointer;
-     border: 2px solid #ececec;
-    @include textLg(17px, 700);
-     background-color: #ffffff;
-     color: #444444;
-     line-height: 16px;
-   }
-&__size:hover {
-  border: 2px solid #c7c7c7;
-}
-&__size:focus {
-  border: 2px solid #63d1bb;
-}
-&__size:active {
-  border: 2px solid #63d1bb;
-}
-&__input:checked+&__size {
-  border: 2px solid #63d1bb;
-}
-&__btn {
-     width: 355px;
-     height: 52px;
-     background-color: #63d1bb;
-     cursor: pointer;
-     @include textLg(17px, 700);
-     line-height: 16px;
-     color: $white;
-     margin-left: 108px;
-     text-transform: uppercase;
-     margin-top: 51px;
-     border: none;
-   }
-}
-.overlay {
-     width: 100%;
-     height: 2444px;
-     position: fixed;
-     opacity: 0.9;
-     background-color: #fff;
-    cursor: pointer;
-     display: none;
-     z-index: 3;
-     top: 0;
-     left: 0;
-     margin-left: 0px;
-}
+////.modal-ctg {
+////margin-top: -250px;
+  //// margin-left: 240px;
+  //// width: 566px;
+  //// height: 336px;
+   ////box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+   ////border: 1px solid #c6c6c6;
+  //// background: #fff;
+   ////position:fixed;
+  //// top: 50%;
+  ////z-index:5;
+  ////display: none;
+////&__title {
+    //// width: 355px;
+    //// height: 29px;
+    //// margin-top: 45px;
+    //// margin-left: 108px;
+    //// @include textLg(30px, 700);
+     ////line-height: 57px;
+    //// text-transform: uppercase;
+   ////}
+////&__text {
+    //// @include textLg(17px, 400);
+    //// line-height: 30px;
+    //// color: $darkGray;
+     ////text-align: center;
+    //// margin-top: 12px;
+   ////}
+////&__form {
+     ////width: 360px;
+     ////margin-top: 38px;
+    //// margin-left: 108px;
+   ////}
+////&__input {
+     ////display: none;
+   ////}
+////&__size {////
+     //padding: 20px 50px;
+     //cursor: pointer;
+     //border: 2px solid #ececec;
+   // @include textLg(17px, 700);
+    // background-color: #ffffff;
+     //color: #444444;
+     //line-height: 16px;
+   //}
+////&__size:hover {
+  ////border: 2px solid #c7c7c7;
+////}
+////&__size:focus {
+  ////border: 2px solid #63d1bb;
+////}
+////&__size:active {
+ //// border: 2px solid #63d1bb;
+////}
+////&__input:checked+&__size {
+ //// border: 2px solid #63d1bb;
+////}
+////&__btn {
+    //// width: 355px;
+    //// height: 52px;
+    //// background-color: #63d1bb;
+    //// cursor: pointer;
+    //// @include textLg(17px, 700);
+     ////line-height: 16px;
+    //// color: $white;
+    //// margin-left: 108px;
+    //// text-transform: uppercase;
+    //// margin-top: 51px;
+     ////border: none;
+   ////}
+////}
+////.overlay {
+     ////width: 100%;
+    ////height: 2444px;
+    //// position: fixed;
+     ////opacity: 0.9;
+     ////background-color: #fff;
+    ////cursor: pointer;
+     ////display: none;
+     ////z-index: 3;
+     ////top: 0;
+    //// left: 0;
+    //// margin-left: 0px;
+////}
 }
 }
 }
