--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -1,11 +1,16 @@
 .menu-bottom {
 
     @media only screen and (max-width: 767px) {
-        background: url(/src/img/header-mobile-1x.jpg);
-        background-position: 50% 0;
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-    }
+         &__bg{
+           background: url(/src/img/header-mobile-1x.jpg);
+           background-position: 50% 0;
+           background-repeat: no-repeat;
+           background-size: 100% auto;   
+         }
+        }
+        
+       
+    
 
     &__title {
       
@@ -99,11 +104,16 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: url(/src/img/header-tablet-2x.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
         height: 748px;
+
+        &__bg{
+            background: url(/src/img/header-tablet-2x.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 768px;
+            border-top: 1px solid $frameMenu;
+        }
 
         &__title {
             @include titleXlTab;
@@ -116,7 +126,7 @@
             display: flex;
             position: relative;
             width: 668px;
-            margin: 369px 0 0 0;
+            margin: 369px 0 0 50px;
         }
 
         &__item{
@@ -181,21 +191,21 @@
 @media (min-width: 1024px) {
 
 
-    .menu-bottom{
-
-        background: url(/src/img/header-desktop-2x.jpg);
+    .menu-bottom {
+    
+        &__bg {
+            background: url(/src/img/header-desktop-2x.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-attachment: scroll;
-
-        
-        
+        background-attachment: scroll; 
+        width: 1200px;
+        }
 
         &__list {
             position: relative;
             width: 1050px;
-            margin: 370px 0 0 0;
+            margin: 370px 0 0 80px;
             
         }
 
@@ -212,7 +222,7 @@
         &__line{
             position: absolute;
             height: 16px;
-            width: 1150px;
+            width: 1200px;
             z-index: 10;
             top: 105px;
             left: -50px;
@@ -221,8 +231,8 @@
         &__line:before{
             content: "";
             position: absolute;
-            width: 1150px;
-            left: 0;
+            width: 1200px;
+            left: -30px;
             bottom: 0;
             right: 0;
             background-repeat: repeat;
@@ -234,10 +244,10 @@
         &__line:after{
             content: "";
             position: absolute;
-            left: 0;
+            left: -30px;
             bottom: 0;
             right: 0;
-            width: 1150px;
+            width: 1200px;
             background-repeat: repeat;
             height: 15px;
             background-size: 40px 35px;
