--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -258,6 +258,10 @@
     margin-left: 50px;
   }
 
+  &__slide1, &__slide2, &__slide3{
+    height: 231px;
+  }
+
   &__slide1 {
     display: flex;
     flex-direction: column;
