небольшие изменения элементов в двух блоках индекса

--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -262,7 +262,7 @@
     height: 231px;
   }
 
-  &__slide1 {
+  &__slide1, &__slide2, &__slide3 {
     display: flex;
     flex-direction: column;
     order: 3;
