--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,6 @@
 @import '_variables.scss';
 @import '_mixin.scss';
-@import '_normalize.scss';
+@import 'normalize.scss';
 
 @import 'blocks/global/body.scss';
 @import 'sprites.scss';
