--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -7,7 +7,7 @@ margin: 0 auto;
 min-width:320px;
 //width:100%;
 &__title{
-margin-top: -340px;//можно убрать
+//margin-top: -340px;//можно убрать
 
 //min-width:320px;
 //width:100%;
