не большие исправление стилей в каталоге

--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -1,21 +1,18 @@
 
 .main{
 margin: 0 auto;
-
+width: 100%;
 .page-form{
 margin: 0 auto;
-min-width:320px;
-//width:100%;
+width:320px;
+//margin-left: -30px;
 &__title{
-//margin-top: -340px;//можно убрать
-
-//min-width:320px;
-//width:100%;
 @include textLg(27px, 700);
 line-height: 30px;
 background: #f1f1f1;
 padding:70px 35px 80px 38px;
-margin-bottom: 19px;
+margin-bottom: 17px;
+margin-top: 10px;
 }
 &__text{
 @include textLg(13px, 400);
@@ -47,12 +44,12 @@ text-transform:uppercase;
 color: #63d1bb;
 margin-left: 29px;
 border-right: 198px;
-top: 0px;
+//top: 19px;
 }
  &__form--radio{
  @include flexbox;
 flex-direction: column;
-top: 0px;
+//top: 0px;
 
 }
 &__radio-grup{
@@ -70,7 +67,7 @@ top: 8px;
 }
 &__input:not(checked)+ label{
   position: relative;
-  padding: 0px 0 0px 35px;
+  padding: 6px 0px 0px 33px;
 }
 &__input:not(checked)+label::before{
 content:'';
@@ -94,7 +91,6 @@ width: 16px;
 height: 16px;
 background-color:#63d1bb;
 border-radius:50%;
-
 opacity: 0;
 }
 &__input:checked + label:after{
@@ -117,7 +113,6 @@ margin-top: -9px;
 }
 &__ch-grup{
  @include flexbox;
-
 flex-direction: column;
 
 }
@@ -126,7 +121,7 @@ margin-bottom: 43px;
 }
 &__label {
   @include textLg(17px, 700);
-  line-height: 18px;
+  line-height: 1.05;
   margin-left: 62px;
   cursor: pointer;
 }
@@ -197,27 +192,29 @@ margin-top: -19px;
 }
 &__name{
  @include flexbox;
-
-  flex-direction: column;
+flex-direction: column;
 }
 &__name-grup{
-top: 0px;
+  margin-top: 0px;
+//top: 15px;
 }
 &__title{
   @include textLg(17px, 700);
-  line-height: 16px;
+  line-height: 0.9;
   color: #63d1bb;
   text-transform:uppercase;
   margin-left: 30px;
+  margin-bottom: 20px;
 }
 &__label{
 @include textLg(17px, 700);
-line-height: 18px;
+line-height: 1.05;
 margin-left: 30px;
+margin-top: 8px;
 }
     &__input {
 @include textLg(17px, 400);
-line-height: 18px;
+line-height: 1.05;
 margin-left: 30px;
 border:none;
 color: #000;
@@ -225,10 +222,10 @@ opacity:0.6;
 border-bottom:2px solid #000;
 width: 260px;
 padding:15px 0px 17px 0;
-margin-bottom: 20px;
+margin-bottom: 13px;
 }
 &__data{
-margin-top: -10px;
+margin-top: 0px;
  @include flexbox;
 flex-direction: column;
 }
@@ -540,16 +537,17 @@ vertical-align: middle;
 }
 @media (min-width:1024px){
 .page-form{
+  width: 100%;
 min-width: 1024px;
 margin-bottom: -60px;
 &__title{
 @include textLg(53px, 700);
-line-height: 57px;
-padding:94px 320px 95px 334px;
+line-height:1.07;
+padding:94px 20px 95px 330px;
 }
 &__text{
 @include textLg(17px, 400);
-line-height: 30px;
+line-height: 1.7;
 color:#444444;
 margin-left: 225px;
 margin-right: 200px;
