--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -7,35 +7,39 @@
 // max-width: 1150px; так он навсю ширину
 margin: 0 auto;
 &__title {
+
 @include textLg(27px, 700);
-padding:55px 0px 74px 42px;
+padding:70px 0px 74px 40px;
 background: #f1f1f1;
 line-height:1.1;
+margin-bottom: 30px;
+margin-top: 10px;
 }
 .catalog {
 &__img{
-    //background:url('/src/img/item1-mobile-1x.jpg ')no-repeat;
-width:260px;
+  width:260px;
     height: 195px;
     margin-left: 15px;
 }
 &__img1{
-    //background:url('/src/img/item2-mobile-1x.jpg')no-repeat;
 width: 260px;
     height: 195px;
     margin-left: 15px;
+    //margin-top: -5px;
 }
 &__img2{
-    //background: url('/src/img/item3-mobile-1x.jpg')no-repeat;
 width: 260px;
     height: 195px;
     margin-left: 15px;
 }
 &__item {
-  width: 258px;
+
+ width: 258px;
+ //height: 179px;
   border: 1px solid #ececec;
   margin-left: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  //margin-top: 0px;
 }
 &__item:hover{
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
@@ -51,27 +55,27 @@ width: 260px;
   cursor: pointer;
 @include textLg(17px,700);
   line-height: 1.4;
-  margin-left: 30px;
-  margin-top:30px;
+ width: 196px;
+  margin: 27px 0 -8px 25px;
 }
 &__title:hover{
   opacity: 0.6;
 }
 &__title:active{
   opacity: 0.3;
-
 }
 &__descr {
 @include textLg(13px, 400);
   color: $darkGray;
   line-height:2.3;
-  margin-left: 30px;
-padding-bottom: 16px;
+  margin-left: 26px;
+  //margin-bottom: 5px;
+padding-bottom: 18px;
   border-bottom: 1px solid #ececec;
   width: 204px;
 }
 &__descr--line{
-@include textLg(13px, 400);
+@include textLg(14px, 400);
 color: $darkGray;
 line-height:2.3;
 margin-left: 30px;
@@ -83,17 +87,16 @@ margin-left: 30px;
 @include flexbox;
   width: 204px;
   justify-content: space-between;
-  margin-left: 30px;
+  margin-left: 25px;
 &__number {
-@include textLg(17px, 700);
-  line-height:1.4;
-  margin-top: 17px;
-  margin-bottom: 20px;
-  color:black;
+@include textLg(15px, 700);
+  line-height:1.6;
+  margin-top: 10px;
+  padding-bottom: 12px;
 }
 &__link {
-  margin-top: 6px;
-margin-bottom: -30px;
+  margin-top: 10px;
+//margin-bottom: -35px;
 }
 &__link-pic{
   background:url('/src/img/sprites.png') -16px -214px;
@@ -117,13 +120,14 @@ width: 260px;
 .player-process {
   @include flexbox;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  //justify-content: space-around;
 &__title {
   @include textLg(17px, 700);
   width: 126px;
-  margin-left: 5px;
+  margin-left: 75px;
   line-height:1.4;
-  margin-top: 19px;
+  margin-top: 23px;
+  margin-right: 45px;
 }
 &__link-pic {
   background:url('/src/img/sprites.png') -314px -263px;
@@ -131,13 +135,16 @@ width: 260px;
   width: 32px;
   height: 22px;
   margin-top: 35px;
-  margin-left: 0px;
+  margin-left: 18px;
 }
 }
 .video-page {
 &__video img{
+  width: 260px;
+  height: 150px;
 margin-top: 10px;
 margin-left: 0px;
+
 }
 &__link-pic {
   background:url('/src/img/sprites.png') -739px -11px;
@@ -159,13 +166,11 @@ margin-left: 0px;
   height: 62px;
 }
 &__descr {
-  @include textLg(13px, 400);
+@include textLg(13px, 400);
   line-height:1.8;
   color: $darkGray;
-  //margin-top: 34px;
-  margin-left: 34px;
-  margin-right: 40px;
   order:3;
+margin: 12px 40px 18px 30px;
 }
 }
 .player__btn {
@@ -174,14 +179,15 @@ margin-left: 0px;
     display: inline-block;
     border: 2px solid $darkGray;
     background-color: $white;
-    margin:9px 0 33px 34px;
-    order: 4;
+    margin: 0px 0px 35px 30px;
+   order: 4;
     text-transform: uppercase;
     @include textLg(17px,700);
     color:$darkGray;
     cursor: pointer;
     line-height:0.9;
-    padding:16px 0 26px 0;
+    padding:16px 5px 20px 5px;
+    vertical-align: top;
 }
 .player__btn:hover{
 background-color: $darkGray;
@@ -216,7 +222,7 @@ opacity:0.8;
     margin-top: 36px;
     width: 149px;
     @include textLg(25px, 700);
-    line-height: 30px;
+    line-height: 0.8;
     text-transform: uppercase;
   }
   &__text {
@@ -238,7 +244,7 @@ opacity:0.8;
     border: 2px solid #ececec;
     @include textLg(17px, 700);
     background-color: #ffffff;
-    line-height: 16px;
+    line-height: 1;
   }
   &__size:hover {
     border: 2px solid #c7c7c7;
@@ -280,86 +286,6 @@ opacity:0.8;
   left: 0;
   margin-left: 0px;
 }
-
-
-
-
-
-
-//Катина модалка)//
-
-//.modal-ctg {
-  // display: none;
-  // position: absolute;
-   //top: 175%;
-  // left: 0;
-   //background-color: $white;
-
- // width: 320px;
- // height: 336px;
-
- // &__title{
-   // width: 146px;
-   // text-align: center;
-   // text-transform: uppercase;
-   // margin: 37px 0 25px 87px;
-  //}
-
-  //&__group{
-   // width: 260px;
-   // height: 53px;
-   // margin: 30px 0 30px 30px;
-   // display: inline-block;
-  //}
-
-  //&__ch-gr{
-   // width: 82px;
-   // height: 53px;
-    //display: inline-block;
-  //}
-
- // &__text{
-   // text-align: center;
-   // margin: 0;
-  //}
-
-  //&__input{
-    //display: none;
-  //}
-
-  //&__size{
-    //position: relative;
-    //top: 14px;
-    //left: 0;
-    //font-weight: 700;
-    //padding: 12px 0px 0px 33px;
-  //}
-
-  //&__size:before{
-   // position: absolute;
-   // content: "";
-   // width: 80px;
-   // height: 50px;
-   // border: 1px solid $frameMenu;
-   // top: 0;
-   // left: 0;
-  //}
-
-  //input:checked + label:after{
-    //position: absolute;
-    //content: "";
-    //width: 80px;
-    //height: 50px;
-   // border: 1px solid $greenLeft;
-    //top: 0;
-   // left: 0;
- // }
-
-  //button{//
-    //margin: 0 0 0 30px;
-  //}
-//}
-//окончание//
 .catalog-card {
 
   &__item {
@@ -496,8 +422,7 @@ opacity:0.8;
     border: 2px solid #63d1bb;
   }
   .modal-ctg__btn {
-
-    width: 355px;
+width: 355px;
     height: 52px;
     background-color: $greenLeft;
     cursor: pointer;
@@ -508,6 +433,8 @@ opacity:0.8;
     text-transform: uppercase;
     margin-top: 51px;
     border: none;
+    display: inline-block;
+    vertical-align: top;
   }
 }
 
@@ -710,29 +637,27 @@ opacity:0.8;
 
 
 @media (min-width:768px){
-  .catalog {////лишнее?
+  .catalog {
   &__item {
     @include flexbox;
     flex-wrap: wrap;
     justify-content: space-between;
   }
   &__title {
-
-    @include titleXlTab;
+@include titleXlTab;
     align-self: flex-start;
     margin: 0 0 59px 0;
   }
   }
 
 .main-catalog{
-
-  min-width: 768px;
+min-width: 768px;
 width: 100%;
 &__title {
 
 
 @include textLg(43px, 700);
-    padding:95px 0px 70px 198px;
+    padding:95px 0px 70px 195px;
     background: #f1f1f1;
     line-height:1.1;
 margin-top: 0px;
@@ -747,7 +672,7 @@ margin-top: 0px;
       background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
       right: 0;
       left: 0px;
-      bottom: 36px;
+      bottom: 30px;
       transform: rotate(-180deg);
     }
 .catalog{
@@ -757,70 +682,76 @@ margin-top: 0px;
     margin-top: 65px;
   width: 760px;
 &__img{
-  // background:url('/src/img/item1-tablet-1x.jpg') no-repeat ;
+
     width: 334px;
     height: 334px;
     margin-left: 25px;
-    margin-bottom: 74px;
-margin-top: -10px;
+    margin-bottom: 64px;
+margin-top: -8px;
 }
 &__img1{
-    //background:url('/src/img/item2-tablet-1x.jpg')no-repeat;
+
     width: 334px;
     height: 334px;
     margin-left: 25px;
-    margin-bottom: 74px;
+    margin-bottom: 64px;
 margin-top: -10px;
 }
 &__img2{
-   // background:url('/src/img/item3-tablet-1x.jpg')no-repeat;
+
     width: 334px;
     height: 334px;
     margin-left: 25px;
-    margin-bottom: 45px;
+    //margin-bottom: 30px;
 margin-top: -10px;
 }
 &__item{
+
     width: 335px;
     height: 332px;
-    margin-top: -20px;
+    margin-top: -17px;
     border: 1px solid #ececec;
     background-color: #ffffff;
     margin-left: 25px;
 }
 &__title{
     @include textLg(20px, 700);
-    line-height: 24px;
-    margin-left:28px;
-    margin-top: 25px;
+    line-height:1.2;
+   // margin-left:23px;
+    margin-top: 26px;
+    width: 230px;
+    margin-bottom: 2px;
+   // padding: 26px 0 3px 23px;
+
 }
 &__descr{
 @include textLg(15px, 400);
     color:#444444;
-    line-height: 30px;
-    margin-top: -65px;
+    line-height: 2;
+    margin-top: 3px;
     padding-bottom: 175px;
     border-bottom: 1px solid #ececec;
     width: 268px;
-    margin-left: 30px;
+    margin-left: 24px;
 }
 &__descr--line{
 @include textLg(15px, 400);
 color:#444444;
 line-height:2;
-margin-top: -65px;
+margin-top: 5px;
 width: 268px;
 padding-bottom: 150px;
 
 }
 .catalog-price {
-
-    @include flexbox;
+@include flexbox;
     width: 268px;
     justify-content: space-between;
     margin-left: 30px;
 &__number{
-    margin-top: 5px;
+  @include textLg(17px, 700);
+line-height: 1.4;
+    margin-top: 8px;
 }
 }
 }
@@ -829,21 +760,23 @@ padding-bottom: 150px;
     width: 668px;
     height: 728px;
     margin-left: 50px;
+    margin-top: 41px;
 .player-process {
     @include flexbox;
     order: 2;
     margin-top: 43px;
 &__title {
     @include textLg(20px, 700);
+    line-height: 1.2;
     margin-top: -47px;
-    margin-right:300px;
+    margin-right:320px;
     width: 241px;
 }
 &__link-pic{
     background:url('/src/img/sprites.png') -314px -263px;
 	  width: 32px;
 	  height: 22px;
-    margin-left: 12px;
+    margin-left: 10px;
     margin-top: -45px;
     position: absolute;
 }
@@ -882,7 +815,7 @@ padding-bottom: 150px;
   order:4;
   border: 2px solid $darkGray;
   background-color: $white;
-  margin-top: 23px;
+  margin-top: 3px;
   margin-left: 42px;
   padding:16px 0px 26px 0px;
 }
@@ -896,8 +829,7 @@ body{
 
   //width: 100%;
 &__title {
-  //width: 465px;
-//border: 1px solid;
+  
   @include textLg(53px, 700);
   padding: 93px 30px 95px 345px;
   background: #f1f1f1;
@@ -916,40 +848,40 @@ body{
   background-image: radial-gradient(circle at 20px 13px, #f1f1f1 13px, transparent 13px);
   right: 0;
   left: 0px;
-  bottom: 45px;
+  bottom: 30px;
   transform: rotate(-180deg);
 }
 .catalog{
 width: 100%;
 &__img{
-  //background:url('/src/img/item1-desktop-1x.jpg')no-repeat;
+
   width: 316px;
   height: 462px;
   //margin-left: 50px;
   margin-left: 25px;
   margin-right: 50px;
-  margin-top: 9px;
+  margin-top: 18px;
   //margin-top: -19px;
 }
 &__img1{
-  //background: url('/src/img/item2-desktop-1x.jpg')no-repeat;
+
   width: 316px;
   height: 462px;
   margin-right: 50px;
-  margin-top: 9px;
+  margin-top: 18px;
 }
 &__img2{
-  //background: url('/src/img/item3-desktop-1x.jpg')no-repeat;
+
   width: 316px;
   height: 462px;
   margin-right: 50px;
-  margin-top: 9px;
+  margin-top: 18px;
 }
 &__item{
   margin-left: -341px;
   width: 314px;
   height: 197px;
-  margin-top: 480px;
+  margin-top: 495px;
   border: 1px solid #ececec;
   background-color: #ffffff;
 }
@@ -971,12 +903,16 @@ width: 100%;
  line-height:2;
  color:$darkGray;
   border-bottom: 1px solid #ececec;
-  padding-bottom: 12px;
+  padding-bottom: 15px;
   width: 256px;
   margin-left: 27px;
 }
 .catalog-price{
   width: 256px;
+  &__number{
+    margin-left: -2px;
+    margin-top: 3px;
+  }
 }
 }
 .player-video{
@@ -987,7 +923,7 @@ width: 100%;
     @include flexbox;
     flex-wrap:wrap;
     flex-direction: column;
-    margin-top: 37px;
+    margin-top: 28px;
     margin-bottom: 105px;
 .player-process{
 @include flexbox;
@@ -995,11 +931,11 @@ width: 100%;
 @include textLg(20px, 700);
 line-height:1.2;
 width: 148px;
-margin-left: 79px;
+margin-left: 30px;
 margin-top: 50px;
 }
 &__link-pic{
-margin-left: 80px;
+margin-left: 30px;
 margin-top: 2px;
 }
 }
@@ -1014,8 +950,8 @@ margin-top: 0px;
 @include textLg(15px, 400);
 width: 225px;
 height: 106px;
-margin-left: 78px;
-line-height: 30px;
+margin-left: 30px;
+line-height: 2;
 }
 }
 .player__btn{
@@ -1024,8 +960,8 @@ width: 230px;
 height: 52px;
 border: 2px solid #444444;
 background-color: #ffffff;
-margin-left: 80px;
-margin-top: 64px;
+margin-left: 30px;
+margin-top: 60px;
 }
 
 }
