--- a/src/style/blocks/pageMain/form.scss
+++ b/src/style/blocks/pageMain/form.scss
@@ -1,7 +1,7 @@
 
 .main{
 margin: 0 auto;
-width: 100%;
+//width: 100%;
 .page-form{
 margin: 0 auto;
 width:320px;
@@ -10,7 +10,7 @@ width:320px;
 @include textLg(27px, 700);
 line-height: 30px;
 background: #f1f1f1;
-padding:70px 35px 80px 38px;
+padding:70px 35px 75px 38px;
 margin-bottom: 17px;
 margin-top: 10px;
 }
