--- a/src/style/blocks/pageHeader/topMenu.scss
+++ b/src/style/blocks/pageHeader/topMenu.scss
@@ -1,35 +1,35 @@
 
 @media screen and (min-width: 320px)  and (max-width: 767px){
 
-  .hamburger-btn {
+.hamburger-btn {
     display: inline-block;
-    overflow: visible;
+  overflow: visible;
     margin: 10px;
-    padding: 15px;
+  padding: 15px;
     cursor: pointer;
     text-transform: none;
     color: inherit;
     background-color: transparent;
     border: 0;
-    outline: none;
+  outline: none;
     position: relative;
     left: 70%;
-    top: 0;
+  top: 0;//
     z-index: 1;
   }
 
-  .hamburger {
-    position: relative;
+  .hamburger {position: relative;
     display: inline-block;
     width: 20px;
     height: 14px;
   }
 
+
   .openBtn{
     top: 50%;
     display: block;
     margin-top: 3px;
-    margin-left: 20px;
+  margin-left: 20px;
     content: "";
     position: absolute;
     width: 20px;
